kubernetes/gitea/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app-ingress: ""
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    app.kubernetes.io/instance: gitea
    kubernetes.io/metadata.name: gitea
    ca-bundle: "true"
  name: gitea
