kubernetes/gitea/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea
  labels:
    helm.sh/chart: gitea-9.4.0
    app: gitea
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/managed-by: Helm
  annotations:
    checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  selector:
    matchLabels:
      app.kubernetes.io/name: gitea
      app.kubernetes.io/instance: gitea
  template:
    metadata:
      labels:
        helm.sh/chart: gitea-9.4.0
        app: gitea
        app.kubernetes.io/name: gitea
        app.kubernetes.io/instance: gitea
        app.kubernetes.io/managed-by: Helm
      # annotations:
      #   io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel: "true"
    spec:
      # runtimeClassName: selinux
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      automountServiceAccountToken: false
      # securityContext:
      #   fsGroup: 1000
      terminationGracePeriodSeconds: 60
      containers:
        - name: gitea
          # renovate: datasource=docker depName=docker.io/gitea/gitea
          image: docker.io/gitea/gitea:28.1.0-rootless@sha256:b1a90409ae9afcd5a5725404c3639da7245248848b99e35332968891290b953e
          imagePullPolicy: IfNotPresent
          ports:
            - name: ssh
              containerPort: 2222
            - name: http
              containerPort: 3000
            - name: profiler
              containerPort: 6060
          livenessProbe:
            failureThreshold: 10
            initialDelaySeconds: 200
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: http
            timeoutSeconds: 1
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: NotRequired
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: temp
              mountPath: /tmp
            - name: data
              mountPath: /data
            - mountPath: /cert
              name: gitea-cert
      volumes:
        - name: init
          secret:
            secretName: gitea-init
            defaultMode: 110
        - name: config
          secret:
            secretName: gitea-configs
            defaultMode: 110
        - name: gitea-cert
          secret:
            secretName: gitea-cert
        - name: inline-config-sources
          secret:
            secretName: gitea-inline-config
        - name: temp
          emptyDir: {}
        - name: data
          persistentVolumeClaim:
            claimName: gitea
      enableServiceLinks: false
      restartPolicy: Always
      schedulerName: default-scheduler
      dnsPolicy: ClusterFirst
