kubernetes/gitea/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-http
  namespace: gitea
  labels:
    helm.sh/chart: gitea-9.4.0
    app: gitea
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/version: "1.20.5"
    version: "1.20.5"
    app.kubernetes.io/managed-by: Helm
  annotations: {}
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  namespace: gitea
  labels:
    helm.sh/chart: gitea-9.4.0
    app: gitea
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/version: "1.20.5"
    version: "1.20.5"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: ssh
      port: 22
      targetPort: ssh
      protocol: TCP
  selector:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea
